--- a/AdventOfCode2020.Tests/AdventOfCode2020.Tests.csproj
+++ b/AdventOfCode2020.Tests/AdventOfCode2020.Tests.csproj
@@ -34,6 +34,9 @@
     <None Update="Days\One\input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Days\Seven\input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Days\Six\input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
